nav-links generated

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,7 +56,7 @@ img {
     padding: 1rem 1.5rem;
   }
 
-  a {
+  .nav-link {
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
